--- a/bootstrap-digipack-shopping cart-1.html
+++ b/bootstrap-digipack-shopping cart-1.html
@@ -232,7 +232,7 @@
                     <div class="row no-gutters">
                         <div class="col-12 d-flex justify-content-between">
                             <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物</p>
-                            <a href=""><button type="button" class="btn btn-primary px-5 py-3" >下一步</button></a>
+                            <a href="./bootstrap-digipack-shopping cart-2.html"><button type="button" class="btn btn-primary px-5 py-3" >下一步</button></a>
                         </div>
                     </div>
                 </div>
