--- a/bootstrap-digipack-shopping cart-4.html
+++ b/bootstrap-digipack-shopping cart-4.html
@@ -237,7 +237,7 @@
                     <div class="row no-gutters">
                         <div class="col-12 d-flex justify-content-end">
                             <!-- <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物</p> -->
-                            <a href=""><button type="button" class="btn btn-primary px-5 py-3" >返回首頁</button></a>
+                            <a href="./bootstrap-digipack-index.html"><button type="button" class="btn btn-primary px-5 py-3" >返回首頁</button></a>
                         </div>
                     </div>
                 </div>
