--- a/bootstrap-digipack-shopping cart-3.html
+++ b/bootstrap-digipack-shopping cart-3.html
@@ -177,9 +177,9 @@
                         <div class="col-12 d-flex justify-content-between mt-2">
                             <!-- <p class="d-flex align-items-center m-0"><i class="fa fa-arrow-left text-sm pr-2"></i>返回購物
                             </p> -->
-                            <a href=""><button type="button" class="btn btn-outline-primary px-5 py-3">上一步</button></a>
+                            <a href="./bootstrap-digipack-shopping cart-2.html"><button type="button" class="btn btn-outline-primary px-5 py-3">上一步</button></a>
 
-                            <a href=""><button type="button" class="btn btn-primary px-5 py-3">前往付款</button></a>
+                            <a href="./bootstrap-digipack-shopping cart-4.html"><button type="button" class="btn btn-primary px-5 py-3">前往付款</button></a>
                         </div>
                     </div>
                 </div>
