--- a/bootstrap-digipack-template.html
+++ b/bootstrap-digipack-template.html
@@ -18,7 +18,7 @@
 
     <nav>
         <div class="container" style="max-width: 1280px">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <a class="navbar-brand" href="#">
                     <div class="logo">
                         <img src="./img/logo.svg" alt="">
@@ -30,7 +30,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 ">
+                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 d-flex align-items-center">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
                         </li>
