--- a/bootstrap-digipack-login.html
+++ b/bootstrap-digipack-login.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="blue position-absolute"></div>
-                            <div class="row d-flex align-content-lg-center align-content-start no-gutters position-relative right"
+                            <div class="row d-flex align-content-lg-center align-content-center no-gutters position-relative right"
                                 style="height: 100vh;">
                                 <div class="col-12 d-flex justify-content-center">
                                     <h2 class="my-2"><svg class="logo w-auto inline-flex"
@@ -99,7 +99,7 @@
                                 <div class="col-12 d-flex justify-content-center">
                                     <p>or use email your account</p>
                                 </div>
-                                <div class="col-12 d-flex justify-content-center">
+                                <div class="col-12 col-md-10 col-lg-12 d-flex justify-content-center mx-auto">
                                     <div class="row no-gutters form">
                                         <div class="col-12 email d-flex justify-content-center">
                                             <input class="p-3" type="email" name="email" id="email" placeholder="Email">
