--- a/bootstrap-digipack-shopping cart-4.html
+++ b/bootstrap-digipack-shopping cart-4.html
@@ -21,9 +21,9 @@
 <body>
 
     <nav>
-        <div class="container" style="max-width: 1280px">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+        <div class="container px-lg-2 px-xl-0" style="max-width: 1280px">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <a class="navbar-brand ml-3" href="#">
                     <div class="logo">
                         <img src="./img/logo.svg" alt="">
                     </div>
@@ -34,31 +34,41 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 ">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
+                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 d-flex align-items-center mr-2">
+                        <button type="button" class="btn btn-outline-light" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Blog</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light ml-lg-1" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Portfolio</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light ml-lg-2" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light px-1 ml-lg-3" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </button>
+
                         <!-- <a class="d-flex justify-content-center px-0" href="">
                             <i
                                 class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
 
                             <i class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
-
-
                         </a> -->
 
-                        <div class="dropdown d-flex flex-row align-items-center">
+                        <div class="dropdown d-flex flex-row align-items-center py-3">
 
-                            <a href="">
+                            <a href="./bootstrap-digipack-shopping cart-1.html">
                                 <i
                                     class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i></a>
 
@@ -69,7 +79,7 @@
                                 </i>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Login</a>
+                                    <a class="dropdown-item" href="./bootstrap-digipack-login.html">Login</a>
                                 </div>
                             </a>
                         </div>
@@ -245,9 +255,9 @@
     </main>
 
     <footer>
-        <div class="container" style="max-width: 85%;">
+        <div class="container px-0">
             <div class="row footer-up no-gutters d-flex flex-lg-row">
-                <div class="col-12 col-md-4 col-lg-2 mr-md-5 mr-lg-0 d-flex flex-column">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-2 mr-md-5 mr-lg-0 d-flex flex-column">
 
                     <a class="d-flex justify-content-start align-items-center" href="">
                         <svg class="w-10 h-10 text-white " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"
@@ -279,7 +289,7 @@
 
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-10 ml-md-5 ml-lg-0">
+                <div class="col-12 col-md-6 col-lg-9 col-xl-10 ml-md-5 ml-lg-0">
                     <div class="row">
                         <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
