--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -18,9 +18,9 @@
 <body>
 
     <nav>
-        <div class="container" style="max-width: 1280px">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+        <div class="container px-lg-2 px-xl-0" style="max-width: 1280px">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <a class="navbar-brand ml-3" href="#">
                     <div class="logo">
                         <img src="./img/logo.svg" alt="">
                     </div>
@@ -31,29 +31,39 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 ">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
+                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 d-flex align-items-center mr-2">
+                        <button type="button" class="btn btn-outline-light" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Blog</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light ml-lg-1" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Portfolio</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light ml-lg-2" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                        </button>
+
+                        <button type="button" class="btn btn-outline-light px-1 ml-lg-3" style="border-radius: 10px;">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </button>
+
                         <!-- <a class="d-flex justify-content-center px-0" href="">
                             <i
                                 class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i>
 
                             <i class="account fas fa-user-circle d-flex justify-content-center align-items-center"></i>
-
-
                         </a> -->
 
-                        <div class="dropdown d-flex flex-row align-items-center">
+                        <div class="dropdown d-flex flex-row align-items-center py-3">
 
                             <a href="./bootstrap-digipack-shopping cart-1.html">
                                 <i
@@ -286,7 +296,7 @@
                         <h1 class="blue-line">Pitchfork Kickstarter Taxidermy</h1>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <p>Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke
+                        <p class="mt-lg-0 mt-4">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke
                             farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies
                             heirloom prism food truck ugh squid celiac humblebrag.</p>
                     </div>
@@ -684,9 +694,9 @@
 
 
     <footer>
-        <div class="container" style="max-width: 85%;">
+        <div class="container px-0">
             <div class="row footer-up no-gutters d-flex flex-lg-row">
-                <div class="col-12 col-md-4 col-lg-2 mr-md-5 mr-lg-0 d-flex flex-column">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-2 mr-md-5 mr-lg-0 d-flex flex-column">
 
                     <a class="d-flex justify-content-start align-items-center" href="">
                         <svg class="w-10 h-10 text-white " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"
@@ -718,7 +728,7 @@
 
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-10 ml-md-5 ml-lg-0">
+                <div class="col-12 col-md-6 col-lg-9 col-xl-10 ml-md-5 ml-lg-0">
                     <div class="row">
                         <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
