--- a/bootstrap-digipack-template.html
+++ b/bootstrap-digipack-template.html
@@ -64,7 +64,7 @@
 
                         <div class="dropdown d-flex flex-row align-items-center py-3">
 
-                            <a href="">
+                            <a href="./bootstrap-digipack-shopping cart-1.html">
                                 <i
                                     class="shop-cart fas fa-shopping-cart d-flex justify-content-center align-items-center"></i></a>
 
@@ -75,7 +75,7 @@
                                 </i>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Login</a>
+                                    <a class="dropdown-item" href="./bootstrap-digipack-login.html">Login</a>
                                 </div>
                             </a>
                         </div>
