--- a/bootstrap-digipack-template.html
+++ b/bootstrap-digipack-template.html
@@ -30,20 +30,20 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end mx-auto" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 d-flex align-items-center mr-2">
+                    <ul class="navbar-nav mr-0 mt-2 mt-lg-0 d-flex align-items-center mr-1">
                         <button type="button" class="btn btn-outline-light" style="border-radius: 10px;">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Blog</a>
                             </li>
                         </button>
 
-                        <button type="button" class="btn btn-outline-light ml-lg-1" style="border-radius: 10px;">
+                        <button type="button" class="btn btn-outline-light ml-lg-2" style="border-radius: 10px;">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Portfolio</a>
                             </li>
                         </button>
 
-                        <button type="button" class="btn btn-outline-light ml-lg-2" style="border-radius: 10px;">
+                        <button type="button" class="btn btn-outline-light ml-lg-1" style="border-radius: 10px;">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">About</a>
                             </li>
@@ -71,7 +71,7 @@
                             <a class="btn dropdown-toggle p-0 d-flex flex-column" href="#" role="button"
                                 id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-                                <i class="account fas fa-user-circle d-flex justify-content-center align-items-center">
+                                <i class="account fas fa-user-circle d-flex justify-content-center align-items-center pr-0">
                                 </i>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -122,15 +122,15 @@
                         </svg>
                         <p class="ml-3 mb-0 ">數位方塊</p>
                     </a>
-                    <p class="mt-md-0">Air plant banjo lyft occupy retro<br> adaptogen indego</p>
+                    <p class="mt-2">Air plant banjo lyft occupy retro<br> adaptogen indego</p>
 
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-9 col-xl-10 ml-md-5 ml-lg-0">
                     <div class="row">
                         <div class="text-center text-md-left col-md-6 col-lg-3">
-                            <h2>CATEGORIES</h2>
-                            <ul>
+                            <h2 class="mb-3">CATEGORIES</h2>
+                            <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
                                 <li>Third Link</li>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
-                            <ul>
+                            <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
                                 <li>Third Link</li>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
-                            <ul>
+                            <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
                                 <li>Third Link</li>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
-                            <ul>
+                            <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
                                 <li>Third Link</li>
