--- a/bootstrap-digipack-template.html
+++ b/bootstrap-digipack-template.html
@@ -94,7 +94,7 @@
     <footer>
         <div class="container px-0">
             <div class="row footer-up no-gutters d-flex flex-lg-row">
-                <div class="col-12 col-md-4 col-lg-3 col-xl-2 mr-md-5 mr-lg-0 d-flex flex-column">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-3 mr-md-5 mr-lg-0 d-flex flex-column">
 
                     <a class="d-flex justify-content-start align-items-center" href="">
                         <svg class="w-10 h-10 text-white " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"
@@ -126,10 +126,19 @@
 
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-9 col-xl-10 ml-md-5 ml-lg-0">
+                <div class="col-12 col-md-6 col-lg-9 col-xl-9 ml-md-5 ml-lg-0">
                     <div class="row">
                         <div class="text-center text-md-left col-md-6 col-lg-3">
-                            <h2 class="mb-3">CATEGORIES</h2>
+                            <h2 class="mb-3" style="letter-spacing: 1px;">CATEGORIES</h2>
+                            <ul class="mb-lg-5 mb-xl-0">
+                                <li>First Link</li>
+                                <li>Second Link</li>
+                                <li>Third Link</li>
+                                <li>Fourth Link</li>
+                            </ul>
+                        </div>
+                        <div class="text-center text-md-left col-md-6 col-lg-3">
+                            <h2 class="mb-3" style="letter-spacing: 1px;">CATEGORIES</h2>
                             <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
@@ -138,7 +147,7 @@
                             </ul>
                         </div>
                         <div class="text-center text-md-left col-md-6 col-lg-3">
-                            <h2>CATEGORIES</h2>
+                            <h2 class="mb-3" style="letter-spacing: 1px;">CATEGORIES</h2>
                             <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
@@ -147,16 +156,7 @@
                             </ul>
                         </div>
                         <div class="text-center text-md-left col-md-6 col-lg-3">
-                            <h2>CATEGORIES</h2>
-                            <ul class="mb-0">
-                                <li>First Link</li>
-                                <li>Second Link</li>
-                                <li>Third Link</li>
-                                <li>Fourth Link</li>
-                            </ul>
-                        </div>
-                        <div class="text-center text-md-left col-md-6 col-lg-3">
-                            <h2>CATEGORIES</h2>
+                            <h2 class="mb-3" style="letter-spacing: 1px;">CATEGORIES</h2>
                             <ul class="mb-0">
                                 <li>First Link</li>
                                 <li>Second Link</li>
