--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -84,8 +84,6 @@
                 </div>
             </nav>
         </div>
-
-
     </nav>
 
     <main>
@@ -134,12 +132,12 @@
             <div class="swiper-pagination"></div>
         </div>
 
-        <div class="container px-0">
+        <div class="container px-0 mx-0 mx-auto">
             <div class="section-1">
                 <div class="row">
-                    <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-                        <h1>Raw Denim Heirloom Man Braid</h1>
-                        <p class="blue-line text-center">Blue bottle crucifix vinyl post-ironic four dollar toast vegan
+                    <div class="col-12 d-flex flex-column justify-content-center align-items-center px-0">
+                        <h1 class="mb-3">Raw Denim Heirloom Man Braid</h1>
+                        <p class="col-lg-8 col-xl-6 blue-line text-center">Blue bottle crucifix vinyl post-ironic four dollar toast vegan
                             taxidermy.
                             Gastropub indxgo juice poutine, ramps microdosing banh mi pug.</p>
                     </div>
@@ -150,7 +148,7 @@
                                 stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
                                 <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                             </svg></div>
-                        <h2>Shooting Stars</h2>
+                        <h2 class="mb-3">Shooting Stars</h2>
                         <p class="text-center">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy.
                             Gastropub indxgo
                             juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
@@ -163,7 +161,7 @@
                                 <circle cx="6" cy="18" r="3"></circle>
                                 <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
                             </svg></div>
-                        <h2>The Catalyzer</h2>
+                        <h2 class="mb-3">The Catalyzer</h2>
                         <p class="text-center">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy.
                             Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
                         <a href="">Learn More<i class="fas fa-arrow-right ml-2"></i></a>
@@ -174,7 +172,7 @@
                                 <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
                                 <circle cx="12" cy="7" r="4"></circle>
                             </svg></div>
-                        <h2>Neptune</h2>
+                        <h2 class="mb-3">Neptune</h2>
                         <p class="text-center">BBlue bottle crucifix vinyl post-ironic four dollar toast vegan
                             taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
                         <a href="">Learn More<i class="fas fa-arrow-right ml-2"></i></a>
@@ -235,8 +233,8 @@
                     <p>Banh mi cornhole echo park skateboard authentic crucifix neutra tilde lyft biodiesel artisan
                         direct trade mumblecore 3 wolf moon twee</p>
 
-                    <table class="table mx-auto">
-                        <thead>
+                    <table class="table mx-auto mb-0">
+                        <thead class="thead-light" style="font-size: 14px;">
                             <tr>
                                 <th scope="col">Plan</th>
                                 <th scope="col">Speed</th>
@@ -250,32 +248,33 @@
                                 <th scope="row">Start</th>
                                 <td>5 Mb/s</td>
                                 <td>15 GB</td>
-                                <td>Free</td>
+                                <td style="font-size: 18px;">Free</td>
                                 <td><input name="plan" type="radio"></td>
                             </tr>
                             <tr>
                                 <th scope="row">Pro</th>
                                 <td>25 Mb/s</td>
                                 <td>25 GB</td>
-                                <td>$24</td>
+                                <td style="font-size: 18px;">$24</td>
                                 <td><input name="plan" type="radio"></td>
                             </tr>
                             <tr>
                                 <th scope="row">Business</th>
                                 <td>36 Mb/s</td>
                                 <td>40 GB</td>
-                                <td>$50</td>
+                                <td style="font-size: 18px;">$50</td>
                                 <td><input name="plan" type="radio"></td>
                             </tr>
                             <tr>
                                 <th scope="row">Exclusive</th>
                                 <td>48 Mb/s</td>
                                 <td>120 GB</td>
-                                <td>$72</td>
+                                <td style="font-size: 18px;">$72</td>
                                 <td><input name="plan" type="radio"></td>
                             </tr>
                         </tbody>
                     </table>
+                    <hr class="w-100 my-0 mb-3">
 
                     <div class="table-bottomd d-flex justify-content-between align-items-center pl-3">
                         <a href="">Learn More<i class="fas fa-arrow-right ml-2"></i></a>
@@ -417,11 +416,11 @@
 
         <div class="section-6">
             <div class="container px-0">
-                <div class="row mx-lg-5 no-gutters">
+                <div class="row no-gutters">
                     <div class="col-12 col-lg-6">
                         <img src="https://dummyimage.com/400x400" alt="" style="width: 100%;">
                     </div>
-                    <div class="col-12 col-lg-6 py-3 pl-md-5">
+                    <div class="col-12 col-lg-6 py-lg-3 pl-lg-5 mt-lg-0 mt-4">
                         <h2>BRAND NAME</h2>
                         <h1>The Catcher in the Rye</h1>
                         <div class="review p-0 no-gutters mb-3">
@@ -535,7 +534,7 @@
                                         class="btn btn-primary mt-0" style="width: 100px;height: 40px;">Button</button>
                                 </div>
 
-                                <button class="rounded-circle ml-3" style="width:40px; height:40px;"><svg
+                                <button class="rounded-circle ml-3" style="width:40px; height:40px; border: 0;"><svg
                                         fill="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                         stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24"
                                         style="width:20px; height:20px;">
