--- a/bootstrap-digipack-index.html
+++ b/bootstrap-digipack-index.html
@@ -72,7 +72,8 @@
                             <a class="btn dropdown-toggle p-0 d-flex flex-column" href="#" role="button"
                                 id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-                                <i class="account fas fa-user-circle d-flex justify-content-center align-items-center pr-0">
+                                <i
+                                    class="account fas fa-user-circle d-flex justify-content-center align-items-center pr-0">
                                 </i>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -137,7 +138,8 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-column justify-content-center align-items-center px-0">
                         <h1 class="mb-3">Raw Denim Heirloom Man Braid</h1>
-                        <p class="col-lg-8 col-xl-6 blue-line text-center">Blue bottle crucifix vinyl post-ironic four dollar toast vegan
+                        <p class="col-lg-8 col-xl-6 blue-line text-center">Blue bottle crucifix vinyl post-ironic four
+                            dollar toast vegan
                             taxidermy.
                             Gastropub indxgo juice poutine, ramps microdosing banh mi pug.</p>
                     </div>
@@ -295,7 +297,8 @@
                         <h1 class="blue-line">Pitchfork Kickstarter Taxidermy</h1>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <p class="mt-lg-0 mt-4">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke
+                        <p class="mt-lg-0 mt-4">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical
+                            gentrify, subway tile poke
                             farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies
                             heirloom prism food truck ugh squid celiac humblebrag.</p>
                     </div>
@@ -370,8 +373,9 @@
                             juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
                         <a href="">Learn More<i class="fas fa-arrow-right ml-2 mt-1"></i></a>
                     </div>
+                    <hr class="w-100 mt-5 mb-0">
                 </div>
-                <hr>
+
                 <div class="row no-gutters">
                     <div class="col-12 d-flex justify-content-center col-md-3 order-md-2 justify-content-md-end">
                         <div class="rounded-circle"> <svg fill="none" stroke="currentColor" stroke-linecap="round"
@@ -388,8 +392,8 @@
                             juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
                         <a href="">Learn More<i class="fas fa-arrow-right ml-2 mt-1"></i></a>
                     </div>
+                    <hr class="w-100 mt-5 mb-0 order-md-3">
                 </div>
-                <hr>
                 <div class="row no-gutters">
                     <div class="col-12 d-flex justify-content-center col-md-3 justify-content-md-start">
                         <div class="rounded-circle"> <svg fill="none" stroke="currentColor" stroke-linecap="round"
@@ -409,7 +413,7 @@
                 </div>
 
                 <div class="button d-flex justify-content-center"> <button type="button"
-                        class="btn btn-primary mt-0">Button</button></div>
+                        class="btn btn-primary mt-5">Button</button></div>
 
             </div>
         </div>
@@ -839,8 +843,8 @@
             // autoplay:{
             //     delay: 500,
             // },
-            
-           
+
+
             loop: true,
 
             navigation: {
